reorder pics. redo color. white text.

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,13 +1,13 @@
  img.left {float:right;}
 
-.red{background-color:#F86451; color:white;}
-.orange{background-color:#FAB55B; color:white;}
-.yellow{background-color:#F2F676; color:white;}
-.green{background-color:#BCE1B1; color:white;}
-.brown{background-color:#D2D0C7; color:white;}
-.blue{background-color:#91E7EA; color:white;}
-.purple{background-color:#CFACEF; color:white;}
-.pink{background-color:#F2DEDE; color:white;}
+.redd{background-color:#91000c; color:white;}
+.orange{background-color:#f19d04; color:white;}
+.yellow{background-color:#628eb8; color:white;}
+.green{background-color:#3d745a; color:white;}
+.brown{background-color:#3a3c42; color:white;}
+.blue{background-color:#01264d; color:white;}
+.purple{background-color:#54054c; color:white;}
+.pink{background-color:#990000; color:white;}
 
 .well {
 
